; ModuleID = '/home/carl/AnghaBench/openssl/test/extr_context_internal_test.c_test_app_context.c'
source_filename = "/home/carl/AnghaBench/openssl/test/extr_context_internal_test.c_test_app_context.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 ()* @test_app_context to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @test_app_context() #0 {
  %1 = alloca i32*, align 8
  %2 = alloca i32, align 4
  store i32* null, i32** %1, align 8
  %3 = call i32* (...) @OPENSSL_CTX_new()
  store i32* %3, i32** %1, align 8
  %4 = call i64 @TEST_ptr(i32* %3)
  %5 = icmp ne i64 %4, 0
  br i1 %5, label %6, label %10

6:                                                ; preds = %0
  %7 = load i32*, i32** %1, align 8
  %8 = call i64 @test_context(i32* %7)
  %9 = icmp ne i64 %8, 0
  br label %10

10:                                               ; preds = %6, %0
  %11 = phi i1 [ false, %0 ], [ %9, %6 ]
  %12 = zext i1 %11 to i32
  store i32 %12, i32* %2, align 4
  %13 = load i32*, i32** %1, align 8
  %14 = call i32 @OPENSSL_CTX_free(i32* %13)
  %15 = load i32, i32* %2, align 4
  ret i32 %15
}

declare dso_local i64 @TEST_ptr(i32*) #1

declare dso_local i32* @OPENSSL_CTX_new(...) #1

declare dso_local i64 @test_context(i32*) #1

declare dso_local i32 @OPENSSL_CTX_free(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
